# HA-frontend

./: .gitignore  CLA.md  README.md  package.json  pyproject.toml
.devcontainer/: devcontainer.json
build-scripts/: README.md  webpack.cjs
calendar/: dialog-calendar-event-editor.ts
cast/: README.md
cast/public/: manifest.json
cast/src/html/: _social_meta.html.template  faq.html.template  index.html.template  media.html.template
cast/src/receiver/: entrypoint.ts
demo/public/: manifest.json
demo/src/html/: _social_meta.html.template  index.html.template
gallery/src/: ha-gallery.ts
hassio/src/: hassio-main.ts
public/: __init__.py
script/: core
src/auth/: ha-authorize.ts
src/cast/: sender_messages.ts
src/components/: ha-logo-svg.ts  ha-sidebar.ts  ha-stt-picker.ts  ha-svg-icon.ts  ha-theme-picker.ts  ha-tts-picker.ts
src/data/: automation_i18n.ts  energy.ts  hardware.ts  logbook.ts  media-player.ts  onboarding.ts  trace.ts  update.ts
src/entrypoints/: service-worker.ts  service_worker.ts
src/fake_data/: demo_services.ts  provide_hass.ts
src/html/: authorize.html.template  index.html.template  onboarding.html.template
src/layouts/: ha-init-page.ts  home-assistant.ts
src/onboarding/: ha-onboarding.ts  onboarding-analytics.ts  onboarding-welcome-links.ts  onboarding-welcome.ts
src/resources/: ha-style.ts  home-assistant-logo-svg.ts  styles-data.ts
src/state/: disconnect-toast-mixin.ts  panel-title-mixin.ts
src/translations/: en.json
test/hassio/: create_session.spec.ts
translations/frontend/: en-GB.json  en.json  nl.json
(+93 files in other folders)
